--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@octokit/core": "^3.5.1",
 		"@octokit/rest": "^18.12.0",
 		"@types/jest": "^27.0.2",
+		"cli-progress": "^3.9.1",
 		"jquery": "^3.6.0",
 		"performance-now": "^2.1.0",
 		"puppeteer-extra": "^3.2.3",
@@ -20,6 +21,7 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@types/cli-progress": "^3.9.2",
 		"@types/uuid": "^8.3.1",
 		"jest": "^27.3.1",
 		"nodemon": "^2.0.14",
