--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "main.ts",
 	"scripts": {
-		"analyze": "ts-node src/main.ts",
+		"start": "ts-node src/main.ts [-- <args>]",
 		"test": "jest"
 	},
 	"author": "",
@@ -20,7 +20,8 @@
 		"sast": "^0.8.1",
 		"scss-parser": "^1.0.5",
 		"ts-jest": "^27.0.7",
-		"uuid": "^8.3.2"
+		"uuid": "^8.3.2",
+		"yargs": "^17.3.0"
 	},
 	"devDependencies": {
 		"@types/cli-progress": "^3.9.2",
